Tue Sep 28 15:02:48 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * orbsvcs/tests/Bug_2112_Regression/client.cpp:

          Fixed #include to work with installed build.

Tue Sep 28 14:18:36 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * orbsvcs/tests/Bug_3891_Regression/Bug_3891_Regression.mpc:

          Test won't build in CORBA/e Micro

        * orbsvcs/tests/Bug_3891_Regression/server.cpp:

          Whitespace cleanup, avoid warnings with older GCC's.

Tue Sep 28 12:10:42 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Environment.h:
        * tao/Environment.cpp:
        * tao/Exception.h:
        * tao/Fault_Tolerance_Service.h:
        * tao/Flushing_Strategy.h:
        * tao/GIOP_Message_State.h:
        * tao/IIOP_Acceptor.h:
        * tao/IIOP_Connection_Handler.h:
        * tao/IIOP_Endpoint.h:
        * tao/Incoming_Message_Queue.h:
        * tao/Invocation_Adapter.h:
        * tao/Invocation_Base.h:
        * tao/Leader_Follower.h:
        * tests/Client_Leaks/Client_Task.h:
        * tests/MT_Timeout/Client_Task.h:
          Doxygen fixes

Tue Sep 28 09:31:34 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Bug_2112_Regression/client.cpp:
          Fixed not used warnings

Tue Sep 28 08:11:50 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * orbsvcs/tests/InterfaceRepo/Bug_2962_Regression/test.idl:
          Resolved error regarding anonymous types.

Mon Sep 27 15:19:09 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * orbsvcs/orbsvcs/Notify/Random_File.cpp:
          Added missing include for ACE_Guard.

Mon Sep 27 15:04:26 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tao/CSD_ThreadPool/CSD_TP_Synch_Helper.inl:
          Added missing include for ACE_Guard.

Mon Sep 27 14:25:28 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * tao/PortableServer/Root_POA.cpp:

          Fix for bug #3891: set the type_id in the TAO_Stub for