@@ -1,3 +1,13 @@
+Wed Sep 28 12:18:42 UTC 2010  Marijke Hengstmengel <mhengstmengel@remedy.nl>
+
+        * TAO_IDL/be/be_codegen.cpp:
+        * TAO_IDL/be/be_util.cpp:
+        * TAO_IDL/be/be_visitor_component/servant_svh.cpp:
+        * TAO_IDL/be/be_global.cpp:
+        * TAO_IDL/be/be_visitor_ccm_pre_proc.cpp:
+        * TAO_IDL/be_include/be_global.h:
+        First step of making it possible to disable events in CCM. 
+
 Tue Sep 28 15:02:48 UTC 2010  Adam Mitz  <mitza@ociweb.com>
 
         * orbsvcs/tests/Bug_2112_Regression/client.cpp:
